--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://abhithakur7080.github.io/calculator-React/",
+  "homepage": "",
   "name": "calculator",
   "version": "0.1.0",
   "private": true,
