--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "",
+  "homepage": "https://dollyaggarwal.github.io/Calculator-React/",
   "name": "calculator",
   "version": "0.1.0",
   "private": true,
